feat: replace architecture to clean
