# backend/controller/post.go
@@ -1,22 +1,27 @@
 package controller
 
 import (
+	"errors"
 	"github.com/gin-gonic/gin"
 	"myapp/entity"
 	"net/http"
 )
 
 type PostController struct {
-	PostRepo
+	PostUseCase
 }
 
-func NewPostController(repo PostRepo) *PostController {
-	return &PostController{repo}
+func NewPostController(u PostUseCase) *PostController {
+	return &PostController{u}
 }
 
 type GetPostsQuery struct {
 	Limit  *int `form:"limit,omitempty"`
 	Offset *int `form:"offset,omitempty"`
+}
+
+type GetPostsResponse struct {
+	Posts []*entity.Post `json:"posts"`
 }
 
 // GetPosts godoc
@@ -27,7 +32,7 @@ type GetPostsQuery struct {
 // @Produce		json
 // @Param			limit	query		string	false	"limit"
 // @Param			offset	query		string	false	"offset"
-// @Success		200		{object}	[]entity.Post
+// @Success		200		{object}	GetPostsResponse
 // @Failure		400		{object}	entity.ErrorResponse
 // @Failure		404		{object}	entity.ErrorResponse
 // @Router			/posts [get]
@@ -37,9 +42,12 @@ func (c PostController) GetPosts(ctx *gin.Context) (interface{}, error) {
 	if err != nil {
 		return nil, entity.WrapError(http.StatusBadRequest, err)
 	}
-	posts, err := c.PostRepo.GetPosts(ctx, query.Limit, query.Offset)
+	if query.Limit == nil && query.Offset != nil {
+		return nil, entity.WrapError(http.StatusBadRequest, errors.New("can't use offset without limit"))
+	}
+	posts, err := c.PostUseCase.GetPosts(ctx, query.Limit, query.Offset)
 	if err != nil {
 		return nil, err
 	}
-	return posts, nil
+	return GetPostsResponse{Posts: posts}, nil
 }
